--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,4 +6,6 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "crewai[tools]>=0.186.1",
+    "langchain-groq>=0.3.8",
+    "notebook>=7.4.5",
 ]
